[landscape and potrait walkthrough updated]

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 
 android {
+    buildFeatures {
+        viewBinding true
+    }
     compileSdkVersion 29
     buildToolsVersion "30.0.0"
 
